[gd_scene load_steps=5 format=3 uid="uid://bj05xfa3c7ol4"]

[ext_resource type="Script" path="res://Scripts/ShroomSlotUI.gd" id="1_015b4"]
[ext_resource type="Texture2D" uid="uid://cmxsvo3jyiwiv" path="res://Resources/Assets/mushroomF.png" id="1_xbaeb"]
[ext_resource type="Script" path="res://Scripts/ClickableTurretUI.gd" id="2_uevol"]
[ext_resource type="PackedScene" uid="uid://bulushael17be" path="res://Scenes/BaseTower.tscn" id="4_y71nu"]

[node name="ShroomBox" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_015b4")

[node name="Name" type="Label" parent="."]
layout_mode = 2
text = "Name
"
horizontal_alignment = 1

[node name="Shroom" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_xbaeb")
expand_mode = 5
stretch_mode = 5
script = ExtResource("2_uevol")
tower_scene = ExtResource("4_y71nu")

[node name="PriceTag" type="Label" parent="."]
layout_mode = 2
text = "000"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Shroom" to="Shroom" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Shroom" to="Shroom" method="_on_mouse_exited"]
